// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`renders correctly 1`] = `
<DocumentFragment>
  .emotion-0 {
  display: table;
  margin: 16px 0;
  min-width: 150px;
  table-layout: fixed;
  width: 100%;
}

.emotion-0 button>div>div {
  font-size: 16px;
}

.emotion-0>div>div {
  display: grid;
  grid-template-columns: code panel;
}

.emotion-0>div {
  border-top-left-radius: 0px;
  border-top-right-radius: 0px;
  display: grid;
}

.emotion-1 {
  border: 1px solid #E7EEEC;
  border-bottom: none;
  border-top-right-radius: 12px;
  border-top-left-radius: 12px;
}

.emotion-3 {
  padding: 10px;
  color: #5D6C74;
  font-size: 14px;
  margin-left: 5px;
  border-bottom: none;
}

.emotion-4 {
  border: 1px solid #E8EDEB;
  border-radius: 12px;
  overflow: hidden;
}

.emotion-5 {
  position: relative;
  display: grid;
  grid-template-areas: 'code panel';
  grid-template-columns: auto 38px;
  border-radius: inherit;
  z-index: 0;
}

.emotion-5:before,
.emotion-5:after {
  content: '';
  display: block;
  position: absolute;
  z-index: 1;
  top: 0;
  height: 100%;
  width: 8px;
  border-radius: 100%;
  box-shadow: unset;
  -webkit-transition: box-shadow 100ms ease-in-out;
  transition: box-shadow 100ms ease-in-out;
}

.emotion-5:before {
  grid-column: 1;
  left: -8px;
}

.emotion-5:after {
  grid-column: 2;
}

.emotion-5:before,
.emotion-5:after {
  content: '';
  display: block;
  position: absolute;
  z-index: 1;
  top: 0;
  height: 100%;
  width: 8px;
  border-radius: 100%;
  box-shadow: unset;
  -webkit-transition: box-shadow 100ms ease-in-out;
  transition: box-shadow 100ms ease-in-out;
}

.emotion-5:before {
  grid-column: 1;
  left: -8px;
}

.emotion-5:after {
  grid-column: 2;
}

.emotion-6 {
  grid-area: code;
  overflow-x: auto;
  border-radius: inherit;
  border-top-right-radius: 0;
  border-bottom-right-radius: 0;
  border: 0;
  padding-top: 8px;
  padding-bottom: 8px;
  margin: 0;
  position: relative;
  -webkit-transition: box-shadow 100ms ease-in-out;
  transition: box-shadow 100ms ease-in-out;
  white-space: pre;
  border-color: #E8EDEB;
  background-color: #F9FBFA;
  color: #001E2B;
}

@media only screen and (max-device-width: 812px) and (-webkit-min-device-pixel-ratio: 2) {
  .emotion-6 {
    white-space: pre-wrap;
  }
}

@media only screen and (min-device-width: 813px) and (-webkit-min-device-pixel-ratio: 2) {
  .emotion-6 {
    white-space: pre;
  }
}

.emotion-6:focus,
.emotion-6:active,
.emotion-6:focus-visible,
.emotion-6:focus-within {
  outline: none;
  box-shadow: 0 0 0 2px #0498EC inset;
}

.emotion-7 {
  color: inherit;
  font-size: 13px;
  font-family: 'Source Code Pro',Menlo,monospace;
  line-height: 24px;
  font-size: 13px;
}

.emotion-8 {
  border-spacing: 0;
  width: 100%;
}

.emotion-9 {
  border-spacing: 0;
  vertical-align: top;
  padding: 0 16px;
}

.emotion-12 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  -webkit-flex-direction: column;
  -ms-flex-direction: column;
  flex-direction: column;
  -webkit-flex-shrink: 0;
  -ms-flex-negative: 0;
  flex-shrink: 0;
  gap: 4px;
  padding: 6px;
  border-left: solid 1px;
  background-color: #FFFFFF;
  border-color: #E8EDEB;
  z-index: 2;
  grid-area: panel;
}

.emotion-12 svg {
  width: 16px;
  height: 16px;
}

<div
    class="emotion-0"
  >
    <div>
      <div
        class="emotion-1 emotion-2"
      >
        <div
          class="emotion-3"
        >
          Test Caption
        </div>
      </div>
    </div>
    <div
      class="emotion-4"
    >
      <div
        class="emotion-5"
      >
        <pre
          class="emotion-6"
          tabindex="-1"
        >
          <code
            class="lg-highlight-hljs-light javascript emotion-7"
          >
            <table
              class="emotion-8"
            >
              <tbody>
                <tr
                  class=""
                >
                  <td
                    class="emotion-9"
                  >
                    mongoimport --db test --collection inventory ^
                  </td>
                </tr>
                <tr
                  class=""
                >
                  <td
                    class="emotion-9"
                  >
                              --authenticationDatabase admin --username &lt;user&gt; --password &lt;password&gt; ^
                  </td>
                </tr>
                <tr
                  class=""
                >
                  <td
                    class="emotion-9"
                  >
                              --drop --file ~\\downloads\\inventory.
                    <span
                      class="lg-highlight-property"
                    >
                      crud
                    </span>
                    .
                    <span
                      class="lg-highlight-property"
                    >
                      json
                    </span>
                  </td>
                </tr>
              </tbody>
            </table>
          </code>
        </pre>
        <div
          class="emotion-12"
          data-testid="leafygreen-code-panel"
        />
      </div>
    </div>
  </div>
</DocumentFragment>
`;

exports[`renders correctly when none is passed in as a language 1`] = `
<DocumentFragment>
  .emotion-0 {
  display: table;
  margin: 16px 0;
  min-width: 150px;
  table-layout: fixed;
  width: 100%;
}

.emotion-0 button>div>div {
  font-size: 16px;
}

.emotion-0>div>div {
  display: grid;
  grid-template-columns: code panel;
}

.emotion-0>div {
  border-top-left-radius: 12px;
  border-top-right-radius: 12px;
  display: grid;
}

.emotion-1 {
  border: 1px solid #E8EDEB;
  border-radius: 12px;
  overflow: hidden;
}

.emotion-2 {
  position: relative;
  display: grid;
  grid-template-areas: 'code panel';
  grid-template-columns: auto 38px;
  border-radius: inherit;
  z-index: 0;
}

.emotion-2:before,
.emotion-2:after {
  content: '';
  display: block;
  position: absolute;
  z-index: 1;
  top: 0;
  height: 100%;
  width: 8px;
  border-radius: 100%;
  box-shadow: unset;
  -webkit-transition: box-shadow 100ms ease-in-out;
  transition: box-shadow 100ms ease-in-out;
}

.emotion-2:before {
  grid-column: 1;
  left: -8px;
}

.emotion-2:after {
  grid-column: 2;
}

.emotion-2:before,
.emotion-2:after {
  content: '';
  display: block;
  position: absolute;
  z-index: 1;
  top: 0;
  height: 100%;
  width: 8px;
  border-radius: 100%;
  box-shadow: unset;
  -webkit-transition: box-shadow 100ms ease-in-out;
  transition: box-shadow 100ms ease-in-out;
}

.emotion-2:before {
  grid-column: 1;
  left: -8px;
}

.emotion-2:after {
  grid-column: 2;
}

.emotion-3 {
  grid-area: code;
  overflow-x: auto;
  border-radius: inherit;
  border-top-right-radius: 0;
  border-bottom-right-radius: 0;
  border: 0;
  padding-top: 8px;
  padding-bottom: 8px;
  margin: 0;
  position: relative;
  -webkit-transition: box-shadow 100ms ease-in-out;
  transition: box-shadow 100ms ease-in-out;
  white-space: pre;
  border-color: #E8EDEB;
  background-color: #F9FBFA;
  color: #001E2B;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  padding-top: 6px;
  padding-bottom: 6px;
}

@media only screen and (max-device-width: 812px) and (-webkit-min-device-pixel-ratio: 2) {
  .emotion-3 {
    white-space: pre-wrap;
  }
}

@media only screen and (min-device-width: 813px) and (-webkit-min-device-pixel-ratio: 2) {
  .emotion-3 {
    white-space: pre;
  }
}

.emotion-3:focus,
.emotion-3:active,
.emotion-3:focus-visible,
.emotion-3:focus-within {
  outline: none;
  box-shadow: 0 0 0 2px #0498EC inset;
}

.emotion-4 {
  color: inherit;
  font-size: 13px;
  font-family: 'Source Code Pro',Menlo,monospace;
  line-height: 24px;
  font-size: 13px;
}

.emotion-5 {
  border-spacing: 0;
  width: 100%;
}

.emotion-6 {
  border-spacing: 0;
  vertical-align: top;
  padding: 0 16px;
}

.emotion-7 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  -webkit-flex-direction: column;
  -ms-flex-direction: column;
  flex-direction: column;
  -webkit-flex-shrink: 0;
  -ms-flex-negative: 0;
  flex-shrink: 0;
  gap: 4px;
  padding: 6px;
  border-left: solid 1px;
  background-color: #FFFFFF;
  border-color: #E8EDEB;
  z-index: 2;
  grid-area: panel;
}

.emotion-7 svg {
  width: 16px;
  height: 16px;
}

<div
    class="emotion-0"
  >
    <div
      class="emotion-1"
    >
      <div
        class="emotion-2"
      >
        <pre
          class="emotion-3"
          tabindex="-1"
        >
          <code
            class="lg-highlight-hljs-light none emotion-4"
          >
            <table
              class="emotion-5"
            >
              <tbody>
                <tr
                  class=""
                >
                  <td
                    class="emotion-6"
                  >
                    [{plot A trio of guys try and make up for missed opportunities in childhood by forming a three-player baseball team to compete against standard children baseball squads.}]
                  </td>
                </tr>
              </tbody>
            </table>
          </code>
        </pre>
        <div
          class="emotion-7"
          data-testid="leafygreen-code-panel"
        />
      </div>
    </div>
  </div>
</DocumentFragment>
`;
